--- a/src/Pages/InvoicePage/invoice-style.css
+++ b/src/Pages/InvoicePage/invoice-style.css
@@ -1,32 +1,55 @@
-.customer{
-    padding:10px 30px;
+.customer {
+    padding: 30px 30px;
 }
 
-.form{
+.form {
     display: flex;
     flex-wrap: wrap;
-    /* grid-template-columns: repeat(, 1fr); */
-    gap:20px;
+    gap: 20px;
     align-items: center;
     flex-basis: 30%;
 }
 
 
-.form-control  input,.form-control .form-input {
-    height:40px;
+.form-control input,
+.form-control .form-input {
+    height: 40px;
     width: 250px;
 }
 
-.form-control{
+.form-control {
     display: flex;
     align-items: center;
 }
 
-
-.form-control p{
-    width:100px;
+.form-control p {
+    width: 100px;
 }
 
-.invoice-data .form-control{
-    width:fit-content;
+.invoice-data .form-control {
+    width: fit-content;
+}
+
+.totals-container {
+    font-family: OCR A Std, monospace;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.invoice-page {
+    background-color: #ffffff;
+    border-radius: 10px;
+}
+
+.invoice-title {
+    display: flex;
+    justify-content: center;
+    font-family: 'Avantgarde, "TeX Gyre Adventor", "URW Gothic L", serif';
+    font-size: 40px;
+}
+
+.note-style {
+    min-height: 300px;
+
 }
